--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                     <div class="products-grid">
                         <div class="product-card">
                             <div class="product-image">
-                                <img src="https://images.unsplash.com/photo-1624206112918-f140f087f9b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80" alt="Liquid Black Hoodie">
+                                <img src="https://unsplash.com/photos/man-wearing-grey-pullover-hoodie-a_KC8ocB650"Liquid Black Hoodie">
                                 <span class="product-badge">BESTSELLER</span>
                             </div>
                             <div class="product-info">
@@ -981,7 +981,7 @@
                         </div>
                         <div class="product-card">
                             <div class="product-image">
-                                <img src="https://images.unsplash.com/photo-1601959055820-dbbe3b8c26e9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1587&q=80" alt="Liquid Red Hoodie">
+                                <img src="https://unsplash.com/photos/person-in-brown-hoodie-and-black-pants-standing-on-staircase-ikLELWYbyxk" alt="Liquid Red Hoodie">
                                 <span class="product-badge">NEW</span>
                             </div>
                             <div class="product-info">
