--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
                     <div class="products-grid">
                         <div class="product-card">
                             <div class="product-image">
-                                <img src="https://unsplash.com/photos/man-wearing-grey-pullover-hoodie-a_KC8ocB650"Liquid Black Hoodie">
+                                <img src="https://unsplash.com/photos/person-wearing-green-hooded-jacket-inside-room-E3NUmCScugo"Liquid Black Hoodie">
                                 <span class="product-badge">BESTSELLER</span>
                             </div>
                             <div class="product-info">
@@ -981,7 +981,7 @@
                         </div>
                         <div class="product-card">
                             <div class="product-image">
-                                <img src="https://unsplash.com/photos/person-in-brown-hoodie-and-black-pants-standing-on-staircase-ikLELWYbyxk" alt="Liquid Red Hoodie">
+                                <img src="https://5.imimg.com/data5/SELLER/Default/2023/10/353544842/IG/VZ/VT/161863429/men-zip-hoodie-1000x1000.jpg" alt="Liquid Red Hoodie">
                                 <span class="product-badge">NEW</span>
                             </div>
                             <div class="product-info">
