--- a/index.html
+++ b/index.html
@@ -970,18 +970,18 @@
                     <div class="products-grid">
                         <div class="product-card">
                             <div class="product-image">
-                                <img src="https://unsplash.com/photos/person-wearing-green-hooded-jacket-inside-room-E3NUmCScugo"Liquid Black Hoodie">
+                                <img src="https://i.etsystatic.com/45569371/r/il/71d98f/5413974259/il_600x600.5413974259_5mnf.jpg"Liquid Black Hoodie">
                                 <span class="product-badge">BESTSELLER</span>
                             </div>
                             <div class="product-info">
                                 <h3 class="product-title">Liquid Black Hoodie</h3>
                                 <div class="product-price">$89.99</div>
-                                <button class="add-to-cart" data-name="Liquid Black Hoodie" data-price="89.99" data-image="https://unsplash.com/photos/man-wearing-grey-pullover-hoodie-a_KC8ocB650">ADD TO CART</button>
+                                <button class="add-to-cart" data-name="Liquid Black Hoodie" data-price="89.99" data-image="https://th.bing.com/th/id/OIP.83Ud91Jsl6J8PYbB3y9i3QHaJ4?pid=ImgDet&w=178&h=238&c=7&dpr=1.5&cb=idpwebpc2">ADD TO CART</button>
                             </div>
                         </div>
                         <div class="product-card">
                             <div class="product-image">
-                                <img src="https://5.imimg.com/data5/SELLER/Default/2023/10/353544842/IG/VZ/VT/161863429/men-zip-hoodie-1000x1000.jpg" alt="Liquid Red Hoodie">
+                                <img src="https://th.bing.com/th/id/OIP.Kgkv513UYhmP9VTBFVtZ6QHaHa?w=800&h=800&rs=1&pid=ImgDetMain&cb=idpwebpc2" alt="Liquid Red Hoodie">
                                 <span class="product-badge">NEW</span>
                             </div>
                             <div class="product-info">
